fix overflow x

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600&display=swap');
 
 /* base style */
+Html,body{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+    
 body {
     font-family: 'Poppins', sans-serif;
     color: #8A8A8A;
